# ondogdog

./: .gitignore  CMakeLists.txt  action.yml  install.sh  readme.md  yikesaiting.sh
.github/action/hdfs-deploy/: action.yml
.github/action/ondogdog-install/: action.yml
.github/workflows/: ccpp.yml  go.yml  macOS-oushu.yml  ondogdog.yml  oushudb-docker-compose.yml  oushudb-rpm.yml  oushudb.yml  test-workflow-reuse.yml  workflow-reuse.yml
.github/workflows/scripts/: init_hdfs.sh  init_linux.sh  init_macos.sh  init_oushudb.sh  init_oushudb6.sh  test_oushudb.sh
config/: .bashrc  .lldbinit  .vimrc  Dockerfile  bashrc  dbms.sh  dic.dic  dic.txt  hawq-dependency.xml  hawq-site.xml  hornet-dependency.xml  lldbinit  oushudb.xml  oushudb6.xml  psqlrc  user-rule.txt  vimrc  yizhiyangrc
cpp/: CMakeLists.txt  mymalloc.c  pipe.cpp  stdxxl.cpp  sum.cpp
docker/: Makefile  chiyang.patch  oushudb-centos6.Dockerfile
docker/oushudb/: Dockerfile  docker-compose.yaml  oushuhostfile  start_hdfs.sh  start_magma.sh  start_main.sh  start_segment.sh
docker/oushudb/conf/: .bashrc  core-site.xml  hdfs-site.xml
docker/oushudb/conf/oushudb/: magma-client.xml  magma-topology.yaml  oushudb-site.xml  oushudb-topology.yaml
go/: hello-world.go
sql/: clickhouse-tpc-h-schema.sql  clickhouse.sql  count.sql  init_tpchschema.analyze.sql  init_tpchschema.ao.sql  init_tpchschema.copy.sql  init_tpchschema.ext.sql  init_tpchschema.load.sql  init_tpchschema.magma.sql  init_tpchschema.magmaap.sql  init_tpchschema.magmatp.sql  init_tpchschema.magmatp_pk.sql  init_tpchschema.orc.sql  init_tpchschema.orcext.sql  init_tpchschema.parquet.sql  init_tpchschema.tbl.sql  plpython.sql  tpc-h-ext-exec-dbgen-single-segment.sql  tpc-h-ext-exec-dbgen.sql  tpc-h-schema.sql  tpc-h.analyze.sql  tpc-h.ext.exec.dbgen.2.6.sql  tpc-h.load.sql  tpc-h.sql  tpch.sql
sql/clickbench/: create.sql  generate-result-html.sh  queries.sql  readme.md  result.json  run.sh
test/: Makefile  test
